refactor: implement reward handler
